--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,5 +3,5 @@
 <%= form_for [@list, @task] do |f| %>
   <%= f.label :description %>
   <%= f.text_field :description %>
-  <p><%= f.submit %></p>
+  <%= f.submit %>
 <% end %>
