Figure out how to activate a controller action on click

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -3,5 +3,6 @@
 <%= form_for @list do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
+  <%= hidden_field_tag 'done'  %>
   <%= f.submit %>
 <% end %>
