--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,10 +7,10 @@
     <% @list.tasks.each do |task| %>
       <li>
         <%= task.description %> |
+        <%= task.done %> |
         <%= link_to "Edit", edit_list_task_path(@list, task) %> |
-        <%= link_to "Delete", list_task_path(@list, task),
-                                 :data => {:confirm => "Are you sure?",
-                                                :method => "delete"} %>
+        <%= link_to "Delete", list_task_path(@list, task), :data => {:confirm => "Are you sure?", :method => "delete"} %>
+        <%= link_to "done?", list_tasks_done_toggle_path(@list, task) %>
       </li>
     <% end %>
   </ul>
@@ -19,8 +19,6 @@
 <% end %>
 
 <p><%= link_to "Add a task", new_list_task_path(@list) %></p>
-<p><%= link_to "Delete List", list_path(@list),
-                        :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p>
+<p><%= link_to "Delete List", list_path(@list), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
 
 <p><%= link_to "Return to lists", lists_path %></p>
