add ajax for creating a list

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,4 +6,4 @@
   <% end %>
 </ul>
 
-<%= link_to "New List", new_list_path %>
+<%= link_to "New List", new_list_path, id: "newList", remote: true %>
